# C610-smarttraffic-demo2.0

./: README.docx  README.md
doc/: QCS610-smarttraffic-demo2.0-doc.docx  Video description.txt
smarttraffic-demo2.0/: CMakeLists.txt  LICENSE  camera.cpp  camera.h  configenv.cpp  configenv.h  easyui.cpp  easyui.h  layer.conf  main.cpp  nativeCamera.cpp  nativeCamera.h  refreshdata.hpp  savedata.cpp  savedata.h  savedataMain.cpp  sqliteMain  test.cpp  traffic.db  traffic_0.1.bb  weston_dp_client
smarttraffic-demo2.0/include/: ObjectDetection.h  TimeUtil.h  common.h  configenv.hpp  detection.hpp  gstcamera.hpp  gstimg.hpp  snpe_udl_layers.h
smarttraffic-demo2.0/include/easypr/: config.h
smarttraffic-demo2.0/include/easypr/core/: SNPEPlate.hpp  chars_recognise.h  chars_segment.h  core_func.h  feature.h  plate_locate.h
smarttraffic-demo2.0/include/glib-2.0/: glibconfig.h
smarttraffic-demo2.0/include/glib-2.0/gio/: gioenumtypes.h
smarttraffic-demo2.0/include/gst/pbutils/: gstpluginsbaseversion.h
smarttraffic-demo2.0/libs/: libcairo-gobject.so.2  libcairo.so.2.11400.12  libgdk-3.so.0.1800.8  libgdk_pixbuf-2.0.so.0.3611.0  libglib-2.0.so.0  libpango-1.0.so.0  libpangocairo-1.0.so.0  libpangoft2-1.0.so.0
smarttraffic-demo2.0/libs/snpe/: libopencv_core.so.3.3  libopencv_imgproc.so.3.3
smarttraffic-demo2.0/model/: province_mapping
smarttraffic-demo2.0/resources/doc/:  AboutcCopyright .txt
smarttraffic-demo2.0/resources/image/: GDSL.txt  instructions.txt
smarttraffic-demo2.0/resources/image/native_test/: GroundTruth_others.xml
smarttraffic-demo2.0/resources/result/: Result.xml  plateGroundTruth.txt
smarttraffic-demo2.0/resources/text/: batch_test_menu  chinese_mapping  main_menu  test_menu  train_menu
smarttraffic-demo2.0/snpe/: NOTICE.txt  README.md  ReleaseNotes.txt
smarttraffic-demo2.0/snpe/include/zdl/DiagLog/: IDiagLog.hpp  Options.hpp
smarttraffic-demo2.0/snpe/include/zdl/DlContainer/: IDlContainer.hpp
smarttraffic-demo2.0/snpe/include/zdl/DlSystem/: DlEnums.hpp  DlError.hpp  DlOptional.hpp  DlVersion.hpp  IBufferAttributes.hpp  ITensor.hpp  ITensorFactory.hpp  ITensorItr.hpp  ITensorItrImpl.hpp  IUDL.hpp  IUserBuffer.hpp  IUserBufferFactory.hpp  PlatformConfig.hpp  RuntimeList.hpp  String.hpp  StringList.hpp  TensorMap.hpp  TensorShape.hpp  TensorShapeMap.hpp  UDLContext.hpp  UDLFunc.hpp  UserBufferMap.hpp
smarttraffic-demo2.0/snpe/include/zdl/PlatformValidator/: PlatformValidator.hpp
smarttraffic-demo2.0/snpe/include/zdl/SNPE/: ApplicationBufferMap.hpp  PSNPE.hpp  RuntimeConfigList.hpp  SNPE.hpp  SNPEBuilder.hpp  SNPEFactory.hpp  UserBufferList.hpp
smarttraffic-demo2.0/snpe/include/zdl/SnpeUdo/: UdoImpl.h  UdoImplDsp.h  UdoImplGpu.h  UdoReg.h  UdoShared.h
smarttraffic-demo2.0/src/core/: SNPEPlate.cpp  chars_segment.cpp  core_func.cpp  feature.cpp  plate_detect.cpp  plate_locate.cpp  plate_recognize.cpp
smarttraffic-demo2.0/test/: accuracy.hpp  chars.hpp  easyprmain.cpp  plate.cpp  plate.h
